# YatSenOS-Tutorial-Volume-2

./: .gitignore  .prettierrc.json  CNAME  LICENSE  README.md  mkdocs.yml
.github/workflows/: deploy.yml
docs/: index.md
docs/css/: extra.css  fonts.css  inst.css
docs/general/: coding_convention.md  faq.md  help.md  specification.md  typst.md
docs/labs/: 0.md  0x00-env.md  0x01-boot.md  0x02-interrupt.md  0x03-kernel-threads.md  0x04-filesystem.md  0x05-page-fault-fork-and-lock.md  0x05-userspace.md  0x06-filesystem.md  0x06-page-fault-fork-and-lock.md  0x07-memory-management.md  0x08-further.md
docs/labs/0x00/: index.md  tasks.md
docs/labs/0x01/: index.md  tasks.md
docs/labs/0x02/: index.md  tasks.md
docs/labs/0x03/: index.md  tasks.md
docs/labs/0x04/: index.md  tasks.md
docs/labs/0x05/: index.md  tasks.md
docs/labs/0x06/: index.md  tasks.md
docs/labs/0x07/: index.md  tasks.md
docs/labs/0x08/: index.md
docs/overrides/partials/: comments.html
docs/scripts/: katex.js
docs/wiki/: apic.md  ata.md  debug.md  elf.md  exceptions.md  fat.md  fs.md  gdt.md  interrupts.md  linux.md  paging.md  pci.md  qemu.md  ring.md  rust.md  structures.md  uart.md  uefi.md  userspace.md  windows.md
overrides/partials/: comments.html
src/0x00/: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml  rustfmt.toml  taplo.toml  ysos.py
src/0x00/.cargo/: config.toml
src/0x00/assets/: OVMF.fd
src/0x00/crates/boot/: Cargo.toml
src/0x00/crates/boot/.cargo/: config.toml
src/0x00/pkg/boot/: Cargo.toml
src/0x00/pkg/boot/.cargo/: .gitignore
src/0x00/pkg/boot/src/: main.rs
src/0x01/: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml  ysos.py
src/0x01/.cargo/: config.toml
src/0x01/crates/boot/: Cargo.toml
src/0x01/crates/boot/src/: config.rs  fs.rs  lib.rs  main.rs
src/0x01/crates/elf/: Cargo.toml
src/0x01/crates/elf/src/: lib.rs
src/0x01/crates/kernel/: Cargo.toml
src/0x01/crates/kernel/.cargo/: config.toml
src/0x01/crates/kernel/config/: boot.conf  x86_64-unknown-none.json
src/0x01/crates/kernel/src/: lib.rs  main.rs
src/0x01/crates/kernel/src/drivers/: mod.rs  serial.rs
src/0x01/crates/kernel/src/utils/: logger.rs  macros.rs  mod.rs
src/0x01/pkg/boot/: Cargo.toml
src/0x01/pkg/boot/src/: config.rs  fs.rs  lib.rs  main.rs
src/0x01/pkg/elf/: Cargo.toml
src/0x01/pkg/elf/src/: lib.rs
src/0x01/pkg/kernel/: Cargo.toml
src/0x01/pkg/kernel/config/: x86_64-unknown-none.json
src/0x01/pkg/kernel/src/: lib.rs  main.rs
src/0x01/pkg/kernel/src/drivers/: mod.rs  uart16550.rs
src/0x01/pkg/kernel/src/utils/: logger.rs  macros.rs
src/0x02/: Cargo.toml
src/0x02/crates/kernel/: Cargo.toml
src/0x02/crates/kernel/src/interrupt/: exceptions.rs  mod.rs
src/0x02/crates/kernel/src/interrupt/apic/: mod.rs  xapic.rs
src/0x02/crates/kernel/src/memory/: address.rs  allocator.rs  frames.rs  gdt.rs  mod.rs
src/0x02/pkg/kernel/: Cargo.toml
src/0x02/pkg/kernel/src/: lib.rs
src/0x02/pkg/kernel/src/interrupt/: consts.rs  exceptions.rs  mod.rs
src/0x02/pkg/kernel/src/interrupt/apic/: ioapic.rs  mod.rs  xapic.rs
src/0x02/pkg/kernel/src/memory/: allocator.rs  frames.rs  gdt.rs  mod.rs
src/0x02/pkg/kernel/src/utils/: mod.rs
src/0x03/crates/kernel/: Cargo.toml
src/0x03/crates/kernel/src/: main.rs
src/0x03/crates/kernel/src/proc/: context.rs  data.rs  manager.rs  mod.rs  paging.rs  pid.rs  process.rs  processor.rs
src/0x03/crates/kernel/src/proc/vm/: mod.rs  stack.rs
src/0x03/crates/kernel/src/utils/: func.rs  mod.rs  regs.rs
src/0x03/pkg/kernel/: Cargo.toml
src/0x03/pkg/kernel/src/: main.rs
src/0x03/pkg/kernel/src/proc/: context.rs  data.rs  manager.rs  mod.rs  paging.rs  pid.rs  process.rs  processor.rs
src/0x03/pkg/kernel/src/proc/vm/: mod.rs  stack.rs
src/0x03/pkg/kernel/src/utils/: func.rs  mod.rs  regs.rs
src/0x04/: Cargo.toml  Makefile
src/0x04/.cargo/: config.toml
src/0x04/crates/app/.cargo/: config.toml
src/0x04/crates/app/config/: x86_64-unknown-ysos.json
src/0x04/crates/app/hello/: Cargo.toml
src/0x04/crates/kernel/src/: main.rs
src/0x04/crates/kernel/src/interrupt/syscall/: mod.rs  service.rs
src/0x04/crates/kernel/src/memory/: user.rs
src/0x04/crates/kernel/src/utils/: resource.rs
src/0x04/crates/lib/: Cargo.toml
src/0x04/crates/lib/src/: io.rs  lib.rs  macros.rs  syscall.rs
src/0x04/crates/syscall/: Cargo.toml
src/0x04/crates/syscall/src/: lib.rs  macros.rs
src/0x04/pkg/app/.cargo/: config.toml
src/0x04/pkg/app/config/: x86_64-unknown-ysos.json
src/0x04/pkg/app/hello/: Cargo.toml
src/0x04/pkg/app/hello/src/: main.rs
src/0x04/pkg/kernel/src/: main.rs
src/0x04/pkg/kernel/src/interrupt/syscall/: mod.rs  service.rs
src/0x04/pkg/kernel/src/memory/: user.rs
src/0x04/pkg/kernel/src/utils/: resource.rs
src/0x04/pkg/lib/: Cargo.toml
src/0x04/pkg/lib/src/: allocator.rs  io.rs  lib.rs  macros.rs  syscall.rs
src/0x04/pkg/syscall/: Cargo.toml
src/0x04/pkg/syscall/src/: lib.rs
src/0x06/crates/storage/: Cargo.toml
src/0x06/crates/storage/src/: lib.rs
src/0x06/crates/storage/src/common/: block.rs  device.rs  filehandle.rs  filesystem.rs  io.rs  metadata.rs  mod.rs  mount.rs
src/0x06/crates/storage/src/fs/fat16/: bpb.rs  directory.rs  direntry.rs  file.rs  impls.rs  mod.rs
src/0x06/crates/storage/src/partition/: mod.rs
src/0x06/crates/storage/src/partition/mbr/: mod.rs
src/0x06/pkg/storage/: Cargo.toml
src/0x06/pkg/storage/src/: lib.rs
src/0x06/pkg/storage/src/common/: block.rs  device.rs  error.rs  io.rs  macros.rs  metadata.rs  mod.rs  mount.rs
src/0x06/pkg/storage/src/fs/fat16/: bpb.rs  direntry.rs  file.rs  impls.rs
src/0x06/pkg/storage/src/partition/: mod.rs
src/0x06/pkg/storage/src/partition/mbr/: entry.rs  mod.rs  partition.rs
src/0x07/crates/lib/: Cargo.toml
src/0x07/crates/lib/src/: lib.rs  macros.rs
src/0x07/pkg/lib/: Cargo.toml
src/0x07/pkg/lib/src/: lib.rs  macros.rs
src/0x07/pkg/lib/src/allocator/: brk.rs
template/: README.md  report.typ  shared.typ  usage.typ
template/functions/: booktab.typ  fonts.typ  helpers.typ
(+18 files in other folders)
