[workspace]
resolver = "2"
members = [
    "pkg/elf",
    "pkg/boot",
    "pkg/kernel"
]
exclude = ["pkg/app/config", "pkg/app/.cargo"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release-with-debug.package."*"]
debug = false

[workspace.dependencies]
paste = "1.0"
spin = "0.9"
x86 = "0.52"
x86_64 = "0.15"
log = "0.4"
bitflags = "2.3"
libm = "0.2"
xmas-elf = "0.9"
arrayvec = { version = "0.7", default-features = false }
uefi = { version = "0.34", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# Local dependencies

elf = { path = "pkg/elf", package = "ysos_elf" }
boot = { path = "pkg/boot", default-features = false, package = "ysos_boot" }
