[workspace]
exclude  = ["crates/app/.cargo", "crates/app/config"]
members  = ["crates/boot", "crates/elf", "crates/kernel"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[profile.release-with-debug]
debug    = true
inherits = "release"

[profile.release-with-debug.package."*"]
debug = false

[workspace.dependencies]
arrayvec    = { version = "0.7", default-features = false }
bitflags    = "2.10"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
libm        = "0.2"
log         = "0.4"
paste       = "1.0"
spin        = "0.10"
uefi        = { version = "0.36", default-features = false }
x86         = "0.52"
x86_64      = "0.15"
xmas-elf    = "0.10"

# Local dependencies

boot = { path = "crates/boot", default-features = false, package = "ysos_boot" }
elf  = { path = "crates/elf", package = "ysos_elf" }
