[workspace]
resolver = "2"
members = [
    "pkg/elf",
    "pkg/boot",
    "pkg/kernel",
    "pkg/syscall",
    "pkg/lib",
    "pkg/app/*"
]
exclude = ["pkg/app/config", "pkg/app/.cargo"]

[workspace.package]
version = "0.4.0"
edition = "2024"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release-with-debug.package."*"]
debug = false

[workspace.dependencies]
# NOTE: Remove or add dependencies here if you need
#       This list is copied from final project

bit_field = "0.10"
bitflags = "2.6"
hex-literal = "1.0"
libm = "0.2"
linked_list_allocator = "0.10"
log = "0.4"
lru = "0.14"
paste = "1.0"
pc-keyboard = "0.8"
rand_hc = "0.4"
spin = "0.10"
volatile = "0.6"
x86 = "0.52"
x86_64 = "0.15"
xmas-elf = "0.10"
uefi = { version = "0.34", default-features = false }
chrono = { version = "0.4", default-features = false }
arrayvec = { version = "0.7", default-features = false }
num_enum = { version = "0.7", default-features = false }
rand = { version = "0.9", default-features = false }
roaring = { version = "0.10", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
micromath = { version = "2.0", features = ["num-traits"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }

# Local dependencies

lib = { path = "pkg/lib", package = "yslib" }
elf = { path = "pkg/elf", package = "ysos_elf" }
syscall_def = { path = "pkg/syscall", package = "ysos_syscall" }
boot = { path = "pkg/boot", default-features = false, package = "ysos_boot" }
