[package]
edition.workspace = true
name              = "ysos_boot"
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { workspace = true }
elf      = { workspace = true }
log      = { workspace = true }
uefi     = { workspace = true }
x86_64   = { workspace = true }
xmas-elf = { workspace = true }

[features]
boot = [
  "uefi/alloc",
  "uefi/global_allocator",
  "uefi/logger",
  "uefi/panic_handler",
]
default = ["boot"]
