[package]
name = "ysos_boot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", default-features = false }
uefi = "0.26"
uefi-services = { version = "0.23", optional = true}
log = "0.4"
x86_64 = "0.15"
xmas-elf = "0.9"
elf = { package = "ysos_elf", path = "../elf" }

[features]
boot = ["uefi/alloc", "uefi-services"]
default = ["boot"]
