[package]
name = "ysos_boot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", default-features = false }
uefi = { version = "0.28", default-features = false }
log = "0.4"
x86_64 = "0.15"
xmas-elf = "0.9"
elf = { package = "ysos_elf", path = "../elf" }

[features]
boot = ["uefi/alloc", "uefi/logger", "uefi/panic_handler", "uefi/global_allocator"]
default = ["boot"]

