[package]
name = "ysos_kernel"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { workspace = true }
uefi = { workspace = true }
paste = { workspace = true }
spin = { workspace = true }
x86 = { workspace = true }
x86_64 = { workspace = true }
log = { workspace = true }
bitflags = { workspace = true }
libm = { workspace = true }
