[package]
edition.workspace = true
name              = "ysos_kernel"
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field             = { workspace = true }
bitflags              = { workspace = true }
boot                  = { workspace = true }
crossbeam-queue       = { workspace = true }
lazy_static           = { workspace = true }
libm                  = { workspace = true }
linked_list_allocator = { workspace = true }
log                   = { workspace = true }
paste                 = { workspace = true }
spin                  = { workspace = true }
uefi                  = { workspace = true }
volatile              = { workspace = true }
x86                   = { workspace = true }
x86_64                = { workspace = true }
