[package]
name = "ysos_storage"
version = "0.6.0"
edition = "2021"

[dependencies]
hex-literal = { workspace = true }
paste = { workspace = true }
chrono = { workspace = true, features = ["alloc"] }
bitflags = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
num_enum = { workspace = true }
