[package]
name = "ysos_storage"
version.workspace = true
edition.workspace = true

[dependencies]
hex-literal = { workspace = true }
paste = { workspace = true }
chrono = { workspace = true, features = ["alloc"] }
bitflags = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
num_enum = { workspace = true }
