[package]
name = "yslib"
version = "0.7.0"
edition = "2021"

[dependencies]
syscall_def = { workspace = true }
chrono = { workspace = true }
linked_list_allocator = { workspace = true, optional = true }

[features]
default = ["kernel_alloc"]
kernel_alloc = []
brk_alloc = ["dep:linked_list_allocator"]
