[package]
name = "yslib"
version.workspace = true
edition.workspace = true

[dependencies]
syscall_def = { workspace = true }
chrono = { workspace = true }
linked_list_allocator = { workspace = true, optional = true }

[features]
default = ["kernel_alloc"]
kernel_alloc = []
brk_alloc = ["dep:linked_list_allocator"]
